# CargoDrip

./: .env-example  REMEMBER.txt  alembic.ini  pyproject.toml  requirements.txt
frontend/: login.html  main.html  register.html  trucktable.html
migrations/: env.py
migrations/versions/: 08a29bb4347c_new_tables.py  4f567863599d_init_tables.py
src/: deps.py  main.py  routers.py
src/api/: __init__.py  truck.py
src/config/db_data/: __init__.py  config.py  database.py
src/models/: __init__.py  base.py  cargo.py  companies.py  employee.py  shipments.py  trucks.py  types.py
src/repositories/: __init__.py  base_repo.py  companies_repo.py  employee_repo.py  sqlalchemy_repo.py  truck_repo.py
src/scheme/: __init__.py  cargo_scheme.py  companies_scheme.py  employee_scheme.py  shipments_scheme.py  truck_scheme.py
src/service/: __init__.py  truck_service.py
src/utils/: error.py
